# libvmm

./: .gitignore  CONTRIBUTING.md  LICENSE  README  README.md  lgtm.yml  meson.build
.builds/: archlinux.yml  debian-testing-arm64.yml  debian-testing.yml  debian-unstable-arm64.yml  debian-unstable.yml
docs/contributing/: style.md  workflow.md
include/: meson.build
include/vmm/: kvm.hpp  meson.build  utils.hpp
include/vmm/kvm/: meson.build  system.hpp  types.hpp  vm.hpp
include/vmm/utils/: meson.build  utils.hpp
src/: meson.build
src/kvm/: meson.build  system.cpp  types.cpp  vm.cpp
src/utils/: meson.build
tests/: kvm.cpp  meson.build
tests/kvm/: device.cpp  fam_struct.cpp  kvm.cpp  meson.build  system.cpp  vcpu.cpp  vm.cpp
tests/memory/: address.cpp  guest.cpp  meson.build
tests/types/: event.cpp  eventfd.cpp  meson.build
tests/virtio/: device.cpp  meson.build
vmm/: meson.build
vmm/kvm/: kvm.hpp  meson.build  system.cpp  system.hpp  types.cpp  types.hpp  vcpu.hpp  vm.hpp
vmm/kvm/detail/: base.cpp  base.hpp  device.cpp  device.hpp  kvm.hpp  macros.hpp  meson.build  system.cpp  system.hpp  types.cpp  types.hpp  vcpu.cpp  vcpu.hpp  vm.cpp  vm.hpp
vmm/kvm/detail/ioctls/: device.cpp  device.hpp  meson.build  system.cpp  system.hpp  vcpu.cpp  vcpu.hpp  vm.cpp  vm.hpp
vmm/kvm/detail/types/: fam_struct.hpp  file_descriptor.hpp  meson.build
vmm/kvm/internal/: kvm.hpp  meson.build  system.cpp  system.hpp  types.cpp  types.hpp  vcpu.hpp  vm.cpp  vm.hpp
vmm/memory/: address.hpp  guest.hpp  memory.hpp  meson.build
vmm/memory/detail/: address.hpp  guest.cpp  guest.hpp  meson.build
vmm/types/: event.cpp  event.hpp  eventfd.cpp  eventfd.hpp  file_descriptor.cpp  file_descriptor.hpp  meson.build
vmm/types/detail/: exceptions.hpp  fam_struct.hpp  meson.build
vmm/utility/: meson.build  utility.cpp  utility.hpp
vmm/virtio/: meson.build  virtio.hpp
vmm/virtio/detail/: device.hpp  meson.build  queue.cpp  queue.hpp
